2009-12-28  Kinuko Yasuda  <kinuko@chromium.org>

Reviewed by Maciej Stachowiak.

        Fixed isKeypadEvent behavior for chromium/Mac to correctly report
        keyLocation as DOM_KEY_LOCATION_NUMPAD for numeric pad key events.
        https://bugs.webkit.org/show_bug.cgi?id=28247

        Test: fast/events/keydown-numpad-keys.html

        * src/mac/WebInputEventFactory.mm:
        (WebKit::isKeypadEvent):
2009-12-28  Kinuko Yasuda  <kinuko@chromium.org>

        Reviewed by Maciej Stachowiak.

        Fixed isKeypadEvent behavior for Mac to correctly report keyLocation
        as DOM_KEY_LOCATION_NUMPAD for numeric pad key events.
        https://bugs.webkit.org/show_bug.cgi?id=28247

        Test: fast/events/keydown-numpad-keys.html

        * platform/mac/KeyEventMac.mm:
        (WebCore::isKeypadEvent):
2009-12-28  Kinuko Yasuda  <kinuko@chromium.org>

        Reviewed by Maciej Stachowiak.

        Added a layout-test that tests if numeric pad arrow key
        events are correctly reported with keyLocation as
        DOM_KEY_LOCATION_NUMPAD.  Currently this test only passes on Mac.
        https://bugs.webkit.org/show_bug.cgi?id=28247

        * fast/events/keydown-numpad-keys-expected.txt: Added.
        * fast/events/keydown-numpad-keys.html: Added.
        * fast/events/script-tests/keydown-numpad-keys.js: Added.
        (recordKeyEvent):
        (testKeyEventWithLocation):

        * platform/gtk/Skipped: fast/events/keydown-numpad-keys.html added.
        * platform/qt/Skipped: fast/events/keydown-numpad-keys.html added.
        * platform/win/Skipped: fast/events/keydown-numpad-keys.html added.
2009-12-28  Kinuko Yasuda  <kinuko@chromium.org>

        Reviewed by Maciej Stachowiak.

        Extended EventSender.keyDown method to take another (3rd) argument
        for indicating the keyLocation to make numeric pad key events testable.
        Expected values for the argument is one of the KeyLocationCode
        specified in DOM Level 3
        (http://www.w3.org/TR/DOM-Level-3-Events/#events-keyboardevents).
        https://bugs.webkit.org/show_bug.cgi?id=28247

        Test: fast/events/keydown-numpad-keys.html

        * DumpRenderTree/mac/EventSendingController.mm:
        (+[EventSendingController isSelectorExcludedFromWebScript:]):
        (+[EventSendingController webScriptNameForSelector:]):
        (-[EventSendingController keyDown:withModifiers:withLocation:]):


Canonical link: https://commits.webkit.org/44021@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52608 268f45cc-cd09-0410-ab3c-d52691b4dbfc