WebKit/chromium/src/mac/WebInputEventFactory.mm
@@ -92,6 +92,9 @@ static bool isKeypadEvent(NSEvent* event)
         return false;
     }
 
+    if ([event modifierFlags] & NSNumericPadKeyMask)
+        return true;
+
     switch ([event keyCode]) {
     case 71: // Clear
     case 81: // =
